fix pre whitespace

--- a/app/assets/stylesheets/pygments.scss
+++ b/app/assets/stylesheets/pygments.scss
@@ -1,5 +1,5 @@
 .code-widget {
-  .highlight pre { background-color: #333; color: #f8f8f2; white-space: nowrap; max-height: none; overflow: auto; }
+  .highlight pre { background-color: #333; color: #f8f8f2; white-space: pre; max-height: none; overflow: auto; }
   .highlight .hll { background-color: #49483e }
   .highlight .c { color: #BC9458 } /* Comment */
   .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
